mason/qlog
This makes the 2D MASON code.
To learn about other options, type make help

javac -target 1.8 -source 1.8 -g -cp `function join() { local IFS=$1; shift; echo "$*"; }; join ":" ../library/* ` sim/app/heatbugs/*.java sim/app/dheatbugs/*.java sim/app/hexabugs/*.java sim/app/asteroids/*.java sim/app/antsforage/*.java sim/app/virus/*.java sim/app/cto/*.java sim/app/woims/*.java sim/app/mav/*.java sim/app/mousetraps/*.java sim/app/networktest/*.java sim/app/keepaway/*.java sim/app/lsystem/*.java sim/app/lightcycles/*.java sim/app/swarmgame/*.java sim/app/flockers/*.java sim/app/dflockers/*.java sim/app/tutorial1and2/*.java sim/app/tutorial3/*.java sim/app/tutorial4/*.java sim/app/tutorial5/*.java sim/app/schelling/*.java sim/app/pacman/*.java sim/app/pso/*.java sim/app/wcss/tutorial0*/*.java sim/app/wcss/tutorial10/*.java sim/app/wcss/tutorial11/*.java sim/app/wcss/tutorial12/*.java sim/app/wcss/tutorial13/*.java sim/app/jbox2d/blobtest/*.java sim/app/jbox2d/charactercollision/*.java sim/app/jbox2d/dominotower/*.java sim/app/jbox2d/pyramidtest/*.java sim/app/flockbotsim/api/*.java sim/app/flockbotsim/jbox2d/*.java sim/app/flockbotsim/*.java sim/display/*.java sim/engine/*.java sim/util/*.java sim/util/media/*.java sim/util/media/chart/*.java sim/util/gui/*.java sim/util/distribution/*.java sim/field/*.java sim/field/grid/*.java sim/field/continuous/*.java sim/field/network/*.java sim/field/storage/*.java sim/portrayal/*.java sim/portrayal/grid/*.java sim/portrayal/continuous/*.java sim/portrayal/network/*.java sim/portrayal/simple/*.java sim/portrayal/inspector/*.java ec/util/*.java 
warning: [options] bootstrap class path not set in conjunction with -source 8
warning: Supported source version 'RELEASE_6' from annotation processor 'com.jogamp.gluegen.structgen.CStructAnnotationProcessor' less than -source '8'
sim/app/flockbotsim/jbox2d/FlockbotObject.java:55: error: cannot find symbol
          previousLocation = getField().getObjectLocation(this);
                             ^
  symbol:   method getField()
  location: class FlockbotObject
sim/app/flockbotsim/jbox2d/FlockbotObject.java:69: error: cannot find symbol
               getField().setObjectLocation(this, getNextLocation());
               ^
  symbol:   method getField()
  location: class FlockbotObject
sim/app/flockbotsim/jbox2d/FlockbotObject.java:70: error: cannot find symbol
               Double2D currentLocation = getField().getObjectLocation(this);
                                          ^
  symbol:   method getField()
  location: class FlockbotObject
sim/app/flockbotsim/jbox2d/FlockbotObject.java:77: error: cannot find symbol
               getField().setObjectLocation(this, previousLocation);
               ^
  symbol:   method getField()
  location: class FlockbotObject
sim/app/flockbotsim/jbox2d/FlockbotObject.java:113: error: cannot find symbol
          Double2D currentLocation = getField().getObjectLocation(this);
                                     ^
  symbol:   method getField()
  location: class FlockbotObject
sim/app/flockbotsim/jbox2d/FlockbotObject.java:133: error: cannot find symbol
          Double2D loc = getField().getObjectLocation(this);
                         ^
  symbol:   method getField()
  location: class FlockbotObject
sim/app/flockbotsim/jbox2d/FlockbotObject.java:184: error: cannot find symbol
          Bag neighbors = getField().getNeighborsExactlyWithinDistance(getField().getObjectLocation(this), 2);
                          ^
  symbol:   method getField()
  location: class FlockbotObject
sim/app/flockbotsim/jbox2d/FlockbotObject.java:184: error: cannot find symbol
          Bag neighbors = getField().getNeighborsExactlyWithinDistance(getField().getObjectLocation(this), 2);
                                                                       ^
  symbol:   method getField()
  location: class FlockbotObject
sim/app/flockbotsim/jbox2d/LineObject.java:33: error: cannot find symbol
        return new Line(getField().getObjectLocation(this), size, (double)getBody().getAngle());
                        ^
  symbol:   method getField()
  location: class LineObject
sim/app/flockbotsim/jbox2d/RectangleObject.java:42: error: cannot find symbol
        Double2D center = getField().getObjectLocation(this);
                          ^
  symbol:   method getField()
  location: class RectangleObject
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
2 warnings
make: *** [all] Error 1
